  * checks/java.{desc,pm}:
    + [SL] Do not trigger a warning when a jar is not in
      /usr/share/java and the package name matches
      lib.*maven.*plugin.*java.  (Closes: #743446).
    + [SL] Catch uses of Java8 byte code.  (Closes: #743384).
    + [SL] Warn that the suggests/recommends on libservlet[\d\.]+-java is
      needless (Closes: #743453)
    + [NT] Exclude some jar files from "codeless-jar" tag based
      on the basename of the jar file.  This is intended to
      reduce the number of codeless jars for source/doc jars in
      eclipse(-based) packages.
  * checks/source-copyright.pm:
    + [NT] Permit the use of "https://" in DEP-5 format URIs even
      if the policy suggests that they have to use "http://".
      (Closes: #744981)
  * checks/testsuite.pm:
    + [JW] Add new restrictions for DEP-8 tests.  (Closes: #746305)

  * data/cruft/non-distributable-files:
    + [BR] Add a file comes from the Novell libc Software Development
      Kit.  (Closes: #745802)
  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of polarssl, libmms, libminiupnpc,
      and libupnp.
    + [RG] Don't detect mariadb as embedder of mysql.
    + [BR] Detect libidn*, and libsrtp.
  * data/fields/obsolete-packages:
    + [NT] Add hardening-includes and hardening-wrapper on request of
      Thijs Kinkhorst.  (Closes: #711193)
  * data/java/constants:
    + [SL] introduce this file to specify JDK values

  * debian/control:
    + [NT] Add Build-Depends on po4a.
  * debian/lintian.install:
    + [NT] Install translations.
  * debian/{lintian.,source/}lintian-overrides:
    + [NT] Add overrides for using hardening-includes.
  * debian/rules:
    + [NT] Add rules for handling translations.
    + [NT] Run dh_lintian during binary-indep target.

  * frontend/lintian{,-info}:
    + [NT] Use localized version of tag descriptions.
      (Closes: #663155)

  * lib/Lintian/{CheckScript,Profile}.pm:
    + [NT] Add support for translations of tag descriptions.

  * po4a: